--- a/data/map.html
+++ b/data/map.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Medieval Regions Map</title>
-    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/leaflet.css" />
     <link rel="stylesheet" href="./css/ckii.css"/>
     <script type="text/javascript" src="./js/lib/leaflet.js"></script>
