--- a/data/map.html
+++ b/data/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="medievalMap" ng-controller="mainCtrl">
   <head>
     <meta charset="utf-8">
     <title>Medieval Regions Map</title>
@@ -12,9 +12,8 @@
   </head>
   <body>
     <div id="map"></div>
-
     <!--<script type="text/javascript" src="./js/regions.js"></script>-->
-    <script type="text/javascript" src="./js/mapCtrl.js"></script>
-
+    <!--<script type="text/javascript" src="./js/mapCtrl.js"></script>-->
+    <script type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
