--- a/data/map.html
+++ b/data/map.html
@@ -49,7 +49,7 @@
           <form class="form">
             <h2 class="title">Login</h2>
             <input class="usernameInput" type="text" maxlength="14" placeholder="Login" ng-model="chat_login"/>
-            <input class="passwordInput" type="text" maxlength="14" placeholder="Password" ng-model="chat_password"/>
+            <input class="passwordInput" type="password" maxlength="14" placeholder="Password" ng-model="chat_password"/>
             <span class="login_error_text" ng-show="login_error.error">{{login_error.msg}}</span>
             <br><br><br>
             <input type="submit" class="login_btn" value="LOG IN" ng-click="login(chat_login,chat_password)"/>
